feat: implement update user endpoint
